<resources>
    <string name="app_name">LC LACROSE</string>
    <string name="user_edit_box">Usuário</string>
    <string name="pass_edit_box">Senha</string>
    <string name="pass_forgot"><u>Esqueci minha senha</u></string>
    <string name="log_in_button">Entrar</string>
    <string name="about"><u>Sobre</u></string>
    <string name="terms_of_user"><u>Termos de uso</u></string>
    <string name="empty_field_error">Este campo não pode ser vazio.</string>
    <string name="loging">Entrando&#8230;</string>
    <string name="credential_wrong">Usuário ou senha inválido</string>
    <string name="user_invalid">Usuário inválido</string>
    <string name="server_error">Erro no servidor</string>
    <string name="dialog_forgot_pass_title">Digite o email para recuperar sua senha</string>
    <string name="cancel">Cancelar</string>
    <string name="send_email">Enviar</string>
    <string name="email_miss">Digite o email</string>
    <string name="email_sent">E-mail enviado!</string>
    <string name="about_title">Sobre</string>
    <string name="terms_of_user_title">Termos de uso</string>
    <string name="log_off">Sair</string>
    <string name="works">OBRAS</string>
    <string name="work">OBRA</string>
    <string name="dialog_logout_title">Deseja realmente sair do seu usário?</string>
    <string name="user_tag">users</string>
    <string name="work_tag">obras</string>
    <string name="id_tag">id</string>
    <string name="buttom_mold">MOLDADAGEM:\n Cadastro de lote</string>
    <string name="buttom_ruptura">RUPTURA:\n Ruptura de corpos de prova</string>
    <string name="permission_granted">Permissões concedidas</string>
    <string name="permission_denied">Permissão não concedida</string>
    <string name="dialog_permission">Você precisa permitir o acesso a camera para continuar.</string>
    <string name="ok">OK</string>
    <string name="mold">MOLDAGEM</string>
    <string name="corpoLotes">LOTES</string>
    <string name="lote_code">Código do lote</string>
    <string name="default_lote">0000</string>
    <string name="not_info">Não fornecido pelo cliente.</string>
    <string name="material_prompt">Selecione o material</string>
    <string-array name="material_arrays">
        <item>Selecione o material</item>
        <item>Argamassa</item>
        <item>Concreto</item>
        <item>Graute</item>
    </string-array>
    <string name="dimenssion_prompt">Selecione as dimenssões</string>
    <string-array name="dimenssion_arrays_argamassa">
        <item>Selecione as dimenssões</item>
        <item>50x100</item>
        <item>40x40</item>
    </string-array>
    <string name="d50_100">50x100</string>
    <string name="d40_40">40x40</string>
    <string name="d100_200">100x200</string>
    <string-array name="dimenssion_arrays_graute">
        <item>Selecione as dimenssões</item>
        <item>100x200</item>
        <item>50x100</item>
    </string-array>
    <string-array name="dimenssion_arrays_cimento">
        <item>Selecione as dimenssões</item>
        <item>100x200</item>
    </string-array>
    <string name="material_text">Material cimenticio</string>
    <string name="dimenssion_text">Dimenssões nominais</string>
    <string name="constru_text">Concreteira</string>
    <string name="nota_text">Nota fiscal</string>
    <string name="volume_text">Volume (m³)</string>
    <string name="fck_text">FCK de projeto</string>
    <string name="slump_text">Slump</string>
    <string name="slump_flow_text">Slump flow</string>
    <string name="data_text">Data de recebimento</string>
    <string name="date_default">DATA</string>
    <string name="local_text">Local concretado</string>
    <string name="lote_create">CRIAR LOTE</string>
    <string name="ruptura">RUPTURA</string>
    <string name="body_code">Código do corpo de prova</string>
    <string name="construc_prompt">Selecione a concreteira</string>
    <string-array name="construc_arrays">
        <item>Massa Fort – MF</item>
        <item>Lenobetão – LE</item>
        <item>Polimix – PO</item>
        <item>Concreserv – CO</item>
        <item>Supermix – SU</item>
        <item>EMPOLMIX – EM</item>
        <item>INPACTOMIX- IN</item> 
    </string-array>
    <string name="carga_text">Carga (N)</string>
    <string name="type_text">Tipo</string>
    <string name="save_continue">Salvar e continuar</string>
    <string name="save_finish">Salvar e finalizar</string>
    <string name="concreto">Concreto</string>
    <string name="type_prompt">Selecione o tipo</string>
    <string name="date_notput_error">Coloque a data</string>
    <string name="date_before_error">Data inválida</string>
    <string name="default_work">Obra</string>
    <string name="work_empyt">NÃO POSSUI OBRAS DISPONIVEIS</string>
    <string name="lote_corpo_tag">corpoLotes</string>
    <string name="update">Atualizar</string>
    <string name="lote">Lote</string>
    <string name="lote_label">LOTES</string>
    <string name="corpos">corpos</string>
    <string name="getting_lote_number">Carregando&#8230;</string>
    <string name="create_body">Registrando corpo de prova&#8230;</string>
    <string name="create_lote">Criando lote&#8230;</string>
    <string name="list_ruptura_label">Corpos de prova</string>
    <string name="code">Código</string>
    <string name="save">Salvar</string>
    <string name="dialog_cancel_ruptura">Deseja realmente cancelar? (Os dados serão perdidos)</string>
    <string name="yes">SIM</string>
    <string name="saving">Salvando</string>
    <string name="more_text">Observações</string>
    <string name="largura">largura</string>
    <string name="altura">altura</string>
    <string name="lote_create_sucess">Lote criado com sucesso</string>
    <string name="age_text">Idade</string>
    <string name="rupturas_create_sucess">Rupturas salvas com sucesso!</string>
    <string name="lote_age">idade</string>
    <string name="time_stamp_tag">timeStamp</string>
    <string name="dialog_before_age">O teste esta sendo feito antes da data prevista, É isso que deseja?</string>
    <string name="no">Não</string>
    <string name="bloco">BLOCO</string>
    <string name="prisma">PRISMA</string>
    <string name="pavimento_intertravado">PAVIMENTO INTERTRAVADO</string>
    <string name="body">CP</string>
    <string name="moldagem_bloco_label">MOLDAGEM DE BLOCO</string>
    <string name="moldagem_type_label">TIPO DE MOLDAGEM</string>
    <string name="moldagem_pavimento_label">MOLDAGEM DE PAVIMENTO</string>
    <string name="moldagem_prisma_label">MOLDAGEM DE PRISMA</string>
    <string name="body_tag">corpo</string>
    <string name="datafab_text">Data de fabricação</string>
    <string name="lote_text">Lote interno do cliente</string>
    <string name="fab_text">Fabricante</string>
    <string name="func_text">Função estrutural?</string>
    <string name="no_uper">NÂO</string>
    <string name="d120_190_390">120x190x390</string>
    <string name="d140_190_390">140x190x390</string>
    <string name="bloco_tag">bloco</string>
    <string name="comprimento">comprimento</string>
    <string name="lote_bloco_tag">blocoLotes</string>
    <string name="yes_uper">SIM</string>
    <string name="fpk_text">FPK de projeto</string>
    <string name="d60_100_200">60x100x200</string>
    <string name="lote_pavimento_tag">pavimentoLotes</string>
    <string name="date_fab_notput_error">Coloque a data de fabricação.</string>
    <string name="fbk_text">FBK de projeto</string>
    <string name="dialog_date_error_title">Error: Data</string>
    <string name="dialog_date_error">A data de recebimento não pode ser menor do que a de fabricação.</string>
    <string name="dialog_confirm">OK</string>
    <string name="tipo_prisma_text">Tipo de prisma</string>
    <string name="dateGraute_text">Data do  grauteamento</string>
    <string name="local_prisma_text">Local aplicado</string>
    <string name="dataAssent_text">Data de assentamento</string>
    <string name="d120_390_390">120x390x390</string>
    <string name="d140_390_390">140x390x390</string>
    <string name="lote_prisma_tag">prismaLotes</string>
    <string name="tipo_prompt">Selecione o tipo</string>
    <string name="vazio">Vazio</string>
    <string name="metade">Metade</string>
    <string name="cheio">Cheio</string>
    <string name="lote_prima_tag">prismaLotes</string>
    <string name="dialog_date_Assent_error_title">A data de assentamento não pode ser menor do que a de fabricação.</string>
    <string name="dialog_date_Grauur_error_title">A data de grauteamento não pode ser menor do que a de fabricação.</string>
    <string name="lote_prompt">Selecione o tipo de lote</string>
    <string name="lote_empyt">Não possui lotes disponiveis.</string>
    <string name="pavimento_intertravado_reduc">PAVIMENTO INTER.</string>
    <string name="largura_text">Largura (mm)</string>
    <string name="altura_text">Altura (mm)</string>
    <string name="comprimento_text">Comprimento (mm)</string>
    <string name="esp_long_text">Espessura da parede longitudinal (a)</string>
    <string name="esp_trans_text">Espessura da parede transversal (a)</string>
    <string name="data_rompimento_text">Data de rompimento</string>
    <string name="list_bloco_label">BLOCOS ROMPIDOS</string>
    <string name="list_prismas_label">PRISMAS ROMPIDOS</string>
    <string name="list_pavimento_label">PAVIMENTOS ROMPIDOS</string>
    <string name="terms">Agradecemos por usar nossos produtos e serviços (“Serviços”). Os Serviços serão fornecidos pelo Google LLC (“Google”), localizado em 1600 Amphitheatre Parkway, Mountain View, CA 94043, Estados Unidos.  Ao usar nossos Serviços, você está concordando com estes termos. Leia-os com atenção.  Nossos Serviços são muito diversos, portanto, às vezes, podem aplicar-se termos adicionais ou exigências de produtos (inclusive exigências de idade). Os termos adicionais estarão disponíveis com os Serviços relevantes e esses termos adicionais se tornarão parte de nosso contrato com você, caso você use esses Serviços.</string>
    <string name="logo_text">logo</string>
    <string name="lote_tag">lotes</string>
    <string name="cancel_dialog_confirm">Você tem certeza que quer cancelar? Todas as rupturas serão perdidas.</string>
    <string name="diretor">diretor</string>
    <string name="gestor">gestor</string>
    <string name="centro_de_custo">centro_de_custo</string>
    <string name="cliente_tag">clientes</string>
    <string name="get_clientes">Carregando clientes...</string>
    <string name="cliente_prompt">Selecione o cliente</string>
    <string name="blocoTipo">BLOCO</string>
    <string name="prismaTipo">PRISMA</string>
    <string name="blocoTIpo">BLOCO</string>
    <string name="cpTipo">CP</string>
    <string name="classe_text">Classe do bloco</string>
    <string name="classe_prompt">Selecione a type</string>
    <string name="quantidade_text">Quantidade de corpos de provas</string>
    <string name="outras_dim">Outras dimenssões</string>
    <string name="tipo">tipo</string>
    <string name="bloco_minusculo">bloco</string>
    <string name="corpo">Corpos de prova</string>
    <string name="code_dois_pontos">Código:</string>
    <string name="cancelada">Captura cancelada!</string>
    <string name="corpos_erros">Favor registrar todos os corpos!</string>
    <string name="hora_text">Hora</string>
    <string name="hora_default">HORA</string>
    <string name="hora_notput_error">Por favor, insira a hora!</string>
    <string name="nao_informado">Não informado</string>
    <string name="pavimento_minusculo">pavimento</string>
    <string name="d100_100_200">100x100x200</string>
    <string name="d80_100_200">80x100x200</string>
    <string name="add">Adicionar +</string>
    <string name="repeate_lote_text">O Lote foi criado com sucesso! Se deseja aproveitar informações do lote anterior, selecione quais e aperte CONTINUAR. Caso contrario aperte FINALIZAR.</string>
    <string name="finalizar">Finalizar</string>
    <string name="continuar">Continuar</string>
</resources>