<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_orange_dialog"
    android:gravity="center">


    <TextView
        android:id="@+id/dialog_title"
        android:text="@string/repeate_lote_text"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:layout_height="wrap_content">


    </TextView>

    <View
        android:layout_width="0dp"
        android:layout_height="15dp"
        ></View>

    <CheckBox
        android:id="@+id/check_dateFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datafab_text" />
    <CheckBox
        android:id="@+id/check_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_text" />
    <CheckBox
        android:id="@+id/check_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/fab_text" />
    <CheckBox
        android:id="@+id/check_conc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/constru_text" />
    <CheckBox
        android:id="@+id/check_fck"
        android:layout_width="wrap_content"
        android:visibility="gone"

        android:layout_height="wrap_content"
        android:text="@string/fck_text" />
    <CheckBox
        android:id="@+id/check_fbk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"

        android:text="@string/fbk_text" />
    <CheckBox
        android:id="@+id/check_fpk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"

        android:text="@string/fpk_text" />
    <CheckBox
        android:id="@+id/check_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"

        android:text="@string/local_text" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/selector_white_button"
            android:text="@string/finalizar"
            android:layout_margin="5dp"
            android:textColor="@drawable/selector_orange_text_button" />

        <Button
            android:id="@+id/button_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/selector_orange_button"
            android:text="@string/continuar"
            android:textColor="@drawable/selector_white_text_button" />


    </LinearLayout>
</LinearLayout>