<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back_gray_almost_white"
    tools:context="com.lacrose.lc.lacrose.ChooseMoldActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical">

    <Button
        android:id="@+id/cp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/selector_orange_button"
        android:textColor="@drawable/selector_white_text_button"
        android:text="@string/body"
        android:onClick="btCorpo"/>
    <Button
        android:id="@+id/bloco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/selector_orange_button"
        android:textColor="@drawable/selector_white_text_button"
        android:text="@string/bloco"
        android:onClick="btBloco"/>
    <Button
        android:id="@+id/prisma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/selector_orange_button"
        android:textColor="@drawable/selector_white_text_button"
        android:text="@string/prisma"
        android:onClick="btPrisma"/>

    <Button
        android:id="@+id/pav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/selector_orange_button"
        android:textColor="@drawable/selector_white_text_button"
        android:text="@string/pavimento_intertravado"
        android:onClick="btPavimento"/>
    </LinearLayout>
</LinearLayout>
