<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_orange_dialog"
    android:gravity="center">


    <TextView
        android:id="@+id/dialog_send_email_title"
        android:text="@string/dialog_logout_title"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:layout_height="wrap_content">


    </TextView>

    <View
        android:layout_width="0dp"
        android:layout_height="15dp"
        ></View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/selector_white_button"
            android:text="@string/cancel"
            android:layout_margin="5dp"
            android:textColor="@drawable/selector_orange_text_button" />

        <Button
            android:id="@+id/confirm_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/selector_orange_button"
            android:text="@string/log_off"
            android:textColor="@drawable/selector_white_text_button" />


    </LinearLayout>
</LinearLayout>