<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|top"
    android:background="@color/back_gray_almost_white"
    tools:context="com.lacrose.lc.lclacrose.RulpturaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/code_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/code_edit_text"
                    android:layout_marginTop="15dp"
                    android:text="@string/body_code"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/code_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/code_text_view"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_full_white_edit_text"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/default_lote"
                    android:textAlignment="center"
                    android:paddingTop="10dp"
                    android:textSize="18sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/carga_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/carga_edit_text"
                    android:layout_marginTop="15dp"
                    android:text="@string/carga_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/carga_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/carga_text_view"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_gray_edit_text"
                    android:inputType="number"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="@android:color/black" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/type_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/type_spinner"
                    android:layout_marginTop="15dp"
                    android:text="@string/type_text"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/type_text_view"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="50dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@android:color/black"
                    android:prompt="@string/type_prompt"
                    android:entries="@array/type_arrays"
                    android:paddingLeft="20dp" />

                <Button
                    android:id="@+id/save_continue_buttom"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/type_spinner"
                    android:layout_marginBottom="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignEnd="@+id/type_spinner"
                    android:layout_marginTop="15dp"
                    android:layout_alignStart="@+id/type_spinner"
                    android:background="@drawable/selector_orange_button"
                    android:textColor="@drawable/selector_white_text_button"
                    android:text="@string/save_continue"
                    android:onClick="saveContinue"/>
                <Button
                    android:id="@+id/save_finish_buttom"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/save_continue_buttom"
                    android:layout_marginBottom="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignEnd="@+id/save_continue_buttom"
                    android:layout_marginTop="5dp"
                    android:layout_alignStart="@+id/save_continue_buttom"
                    android:background="@drawable/selector_orange_button"
                    android:textColor="@drawable/selector_white_text_button"
                    android:text="@string/save_finish"
                    android:onClick="saveFinish"/>
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>