<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_orange_dialog"
    android:gravity="center">


    <TextView
        android:id="@+id/dialog_title"
        android:text="@string/dialog_forgot_pass_title"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:layout_height="wrap_content">

        <requestFocus />
    </TextView>

    <EditText
        android:id="@+id/edit_email_reset"
        android:layout_width="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_orange_edit_text"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/selector_white_button"
            android:text="@string/cancel"
            android:layout_margin="5dp"
            android:textColor="@drawable/selector_orange_text_button" />

        <Button
            android:id="@+id/confirm_send_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/selector_orange_button"
            android:text="@string/send_email"
            android:textColor="@drawable/selector_white_text_button" />


    </LinearLayout>
</LinearLayout>